github deploy files

--- a/src/navegar.jade
+++ b/src/navegar.jade
@@ -16,10 +16,16 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
 					Lista Suspensa
 					
 				.dropdown-menu(aria-labelledby='navbarDropdown')
-					a.dropdown-item(href='#') Ação
-					a.dropdown-item(href='#') Reação
+					a.dropdown-item(href='#') 
+						i.material-icons.mr-2 waves
+						| Ação
+					a.dropdown-item(href='#') 
+						i.material-icons.mr2 all_inclusive
+						| Reação
 					.dropdown-divider
-					a.dropdown-item(href='#') Interação
+					a.dropdown-item(href='#') 
+						i.material-icons.mr-2 mic
+						| Interação
 		form.form-inline.my-2.my-lg-0
 			input.form-control.mr-sm-2(type='search' placeholder='Achar alguém' aria-label='Search')
 			button.btn.btn-dark.my-2.my-sm-0(type='submit') Pesquisar
