--- a/src/index.jade
+++ b/src/index.jade
@@ -6,8 +6,28 @@ include navegar
 
 block content
   include navegar
-  .container-fluid
-    .row.align-items-center(style="height: calc(100vh - 85px")
+  .container-fluid(style="height: calc(100vh - 85px")
+    .row.align-items-center
+      .col-sm
+        h4
+          i.fas.fa-wifi.fa-5x
+        h2 Addio Mondo Crudele
+        button.btn.btn-dark(type='button') Imprint
+        img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
+      .col-sm
+        h4
+          i.fas.fa-wifi.fa-5x
+        h2 Addio Mondo Crudele
+        button.btn.btn-dark(type='button') Imprint
+        img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
+      .col-sm
+        h4
+          i.fas.fa-wifi.fa-5x
+        h2 Addio Mondo Crudele
+        button.btn.btn-dark(type='button') Imprint
+        img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
+
+    .row.align-items-center
       .col-sm
         h4
           i.fas.fa-wifi.fa-5x
