front page news

--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -1,8 +1,3 @@
-block config
-	//- Setup site's base URL to match the "baseUrl" key within `package.json`
-	//- Otherwise default to relative pathing
-	//- - var baseUrl = config.baseUrl || './'
-
 doctype html
 <html class='no-js' lang='en'>
 
@@ -10,7 +5,7 @@ head
 	meta(charset='utf-8')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 	title The Yellow Yurt
-	meta(name='description', content= 'Daemonite-Yeogurt Together at Last')
+	meta(name='description', content= 'Daemonite Frozen Yeogurt')
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
 	block stylesheets
 		link(rel='stylesheet', href='../styles/main.css')
