--- a/src/index.jade
+++ b/src/index.jade
@@ -6,41 +6,41 @@ include navegar
 
 block content
   include navegar
-  .container-fluid(style="height: calc(100vh - 85px")
-    .row.align-items-center
-      .col-sm
+  .container-fluid.align-items-center.text-center(style="height: calc (100vh - 200px)")
+    .row.mt-5
+      .col-sm.my-5
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
         button.btn.btn-dark(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
-      .col-sm
+      .col-sm.my-5
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
         button.btn.btn-dark(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
-      .col-sm
+      .col-sm.my-5
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
         button.btn.btn-dark(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
 
-    .row.align-items-center
-      .col-sm
+    .row
+      .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
         button.btn.btn-dark(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
-      .col-sm
+      .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
         button.btn.btn-dark(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
-      .col-sm
+      .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
