--- a/src/navegar.jade
+++ b/src/navegar.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light
+nav.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light
 	a.navbar-brand(href='#')
 		i.fas.fa-sun.fa-2x.mr-2
 		| Engenhoca Sonhonhoca Opus 13
