--- a/src/navegar.jade
+++ b/src/navegar.jade
@@ -16,7 +16,7 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light
 					Lista Suspensa
 					
 				.dropdown-menu(aria-labelledby='navbarDropdown')
-					a.dropdown-item(href='#') 
+					a.dropdown-item(href='pages/yonder') 
 						i.material-icons.mr-2 waves
 						| Ação
 					a.dropdown-item(href='#') 
