--- a/src/_styles/main.css
+++ b/src/_styles/main.css
@@ -4,8 +4,8 @@
 // Import Modules
 @import '../_modules/link/link';
 
-/* @import './daemonite/css/material.css'; */
-
+/* @import './custom.scss'; */
+@import './daemonite/css/material.css'
 
 
 // Box sizing partial styles
