--- a/src/_styles/daemonite/assets/scss/variables/_palette.scss
+++ b/src/_styles/daemonite/assets/scss/variables/_palette.scss
@@ -2,39 +2,39 @@
 // Change these values to customise colour palettes
 
 $primary: (
-  color: $material-color-purple-500,
-  dark:  $material-color-purple-700,
-  light: $material-color-purple-100
+  color: $material-color-blue-grey-500,
+  dark:  $material-color-blue-grey-700,
+  light: $material-color-blue-grey-100
 ) !default;
 
 $secondary: (
-  color: $material-color-pink-a200,
-  dark:  $material-color-pink-a400,
-  light: $material-color-pink-a100
+  color: $material-color-indigo-500 ,
+  dark:  $material-color-indigo-900,
+  light: $material-color-indigo-200
 ) !default;
 
 $danger: (
-  color: $material-color-red-500,
-  dark:  $material-color-red-700,
+  color: $material-color-red-700,
+  dark:  $material-color-red-900,
   light: $material-color-red-100
 ) !default;
 
 $info: (
-  color: $material-color-blue-500,
-  dark:  $material-color-blue-700,
-  light: $material-color-blue-100
+  color: $material-color-teal-500,
+  dark:  $material-color-teal-700,
+  light: $material-color-teal-100
 ) !default;
 
 $success: (
-  color: $material-color-green-500,
-  dark:  $material-color-green-700,
-  light: $material-color-green-100
+  color: $material-color-green-700,
+  dark:  $material-color-green-900,
+  light: $material-color-green-300
 ) !default;
 
 $warning: (
-  color: $material-color-orange-500,
-  dark:  $material-color-orange-700,
-  light: $material-color-orange-100
+  color: $material-color-yellow-500,
+  dark:  $material-color-yellow-900,
+  light: $material-color-yellow-300
 ) !default;
 
 $dark: (
