--- a/src/index.jade
+++ b/src/index.jade
@@ -12,19 +12,41 @@ block content
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-dark(type='button' data-toggle='modal' data-target='#exampleModalCenter').
+          
+          Grosso Modal
+
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
+          
+        .modal.fade#exampleModalCenter(tabindex='-1' role='dialog' aria-labelledby='exampleModalCenterTitle' aria-hidden='true')
+          .modal-dialog.modal-dialog-centered(role='document')
+            .modal-content
+              .modal-header.bg-blue-grey
+                h5.modal-title#exampleModalCenterTitle 
+                  i.fas.fa-chess.fa-2x.mr-2
+                  | Engenho Novo LLC
+                button.close(type='button' data-dismiss='modal' aria-label='Close')
+                  span(aria-hidden='true') ×
+              .modal-body.text-left.
+                
+                Λορεμ ιπσθμ δολορ σιτ αμετ, περ ερθδιτι σιγνιφερθμqθε ει, εθμ σολθτα ιντερεσσετ αccομμοδαρε cθ. Qθι σονετ επιcθρει ιδ. Εθ μει σαλε qθοδσι. Qθισ βρθτε μελιθσ προ νο, ατ vισ ασσθμ vερεαρ cιvιβθσ, εξ μινιμ ιθδιcαβιτ εφφιcιενδι qθο. Cασε δολορεμ προ εξ, μει μεισ εθισμοδ περτιναcια αν.
+                
+              .modal-footer
+                button.btn.btn-info.btn-lg.active(type='button' data-dismiss='modal') Clothes
+                button.btn.btn-primary.btn-lg.active(type='button' data-dismiss='modal') Roupa
+
+
       .col-sm.my-5
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
       .col-sm.my-5
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
 
     .row
@@ -32,19 +54,19 @@ block content
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
 
     .row.my-4
@@ -52,17 +74,17 @@ block content
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-dark(type='button') Imprint
+        button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
