themed with meme

--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -7,15 +7,12 @@ head
 	meta(name='description', content= 'Daemonite Frozen Yeogurt')
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
 	block stylesheets
-		link(rel='stylesheet', href='../styles/main.css')
-		//- link(rel='stylesheet', href='../_styles/daemonite/css/daemonite.css')
+		link(rel='stylesheet' href='../styles/main.css')
 		//- link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/daemonite-material@4.1.1/css/material.css')
-		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=News+Cycle|Material+Icons')
-		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css')
+		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=News+Cycle|Material+Icons')
+		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css')
 
 	style.
-
-
 		body, html {
 			font-family: 'News Cycle', sans-serif;
 			font-weight: 300 !important;
@@ -54,7 +51,6 @@ head
 body
 
 	block content
-
 
 	block scripts
 		//- script(src= baseUrl + 'scripts/main.js')
