--- a/src/index.jade
+++ b/src/index.jade
@@ -8,7 +8,7 @@ block content
   include navegar
   .container-fluid.align-items-center.text-center(style="height: 100vh")
     .row.mt-5
-      .col-sm.my-5
+      .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
@@ -32,8 +32,8 @@ block content
                 Λορεμ ιπσθμ δολορ σιτ αμετ, περ ερθδιτι σιγνιφερθμqθε ει, εθμ σολθτα ιντερεσσετ αccομμοδαρε cθ. Qθι σονετ επιcθρει ιδ. Εθ μει σαλε qθοδσι. Qθισ βρθτε μελιθσ προ νο, ατ vισ ασσθμ vερεαρ cιvιβθσ, εξ μινιμ ιθδιcαβιτ εφφιcιενδι qθο. Cασε δολορεμ προ εξ, μει μεισ εθισμοδ περτιναcια αν.
                 
               .modal-footer
-                button.btn.btn-info.btn-lg.active(type='button' data-dismiss='modal') Clothes
-                button.btn.btn-primary.btn-lg.active(type='button' data-dismiss='modal') Roupa
+                button.btn.btn-secondary.btn-lg.mr-2(type='button' data-dismiss='modal') Clothes
+                button.btn.btn-primary.btn-lg(type='button' data-dismiss='modal') Roupa
 
 
       .col-sm.my-5
@@ -49,7 +49,7 @@ block content
         button.btn.btn-primary(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
 
-    .row
+    .row.justify-content-center
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
@@ -69,7 +69,7 @@ block content
         button.btn.btn-primary.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
 
-    .row.my-4
+    .row.mt-5
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
