--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -53,7 +53,7 @@ body
 	block content
 
 	block scripts
-		//- script(src= baseUrl + 'scripts/main.js')
+		script(src= baseUrl + 'scripts/main.js')
 		script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js')
 		script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js')
