--- a/src/navegar.jade
+++ b/src/navegar.jade
@@ -26,6 +26,6 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light
 					a.dropdown-item(href='#') 
 						i.material-icons.mr-2 mic
 						| Interação
-		form.form-inline.my-2.my-lg-0
+		form.form-inline.my-2.my-lg-0.d-none.d-lg-block
 			input.form-control.mr-sm-2(type='search' placeholder='Achar alguém' aria-label='Search')
 			button.btn.btn-dark.my-2.my-sm-0(type='submit') Pesquisar
