--- a/src/index.jade
+++ b/src/index.jade
@@ -32,21 +32,21 @@ block content
                 Λορεμ ιπσθμ δολορ σιτ αμετ, περ ερθδιτι σιγνιφερθμqθε ει, εθμ σολθτα ιντερεσσετ αccομμοδαρε cθ. Qθι σονετ επιcθρει ιδ. Εθ μει σαλε qθοδσι. Qθισ βρθτε μελιθσ προ νο, ατ vισ ασσθμ vερεαρ cιvιβθσ, εξ μινιμ ιθδιcαβιτ εφφιcιενδι qθο. Cασε δολορεμ προ εξ, μει μεισ εθισμοδ περτιναcια αν.
                 
               .modal-footer
-                button.btn.btn-secondary.btn-lg.mr-2(type='button' data-dismiss='modal') Clothes
-                button.btn.btn-primary.btn-lg(type='button' data-dismiss='modal') Roupa
+                button.btn.btn-secondary.active.btn-lg.mr-2(type='button' data-dismiss='modal') Clothes
+                button.btn.btn-dark.btn-lg(type='button' data-dismiss='modal') Roupa
 
 
-      .col-sm.my-5
+      .col-sm.my-5(style="width: 0px auto")
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary.btn-lg(type='button') Imprint
+        button.btn.btn-dark.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
       .col-sm.my-5
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary(type='button') Imprint
+        button.btn.btn-dark(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
 
     .row.justify-content-center
@@ -54,19 +54,19 @@ block content
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary.btn-lg(type='button') Imprint
+        button.btn.btn-dark.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary.btn-lg(type='button') Imprint
+        button.btn.btn-dark.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary.btn-lg(type='button') Imprint
+        button.btn.btn-dark.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
 
     .row.mt-5
@@ -74,17 +74,17 @@ block content
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary.btn-lg(type='button') Imprint
+        button.btn.btn-dark.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary.btn-lg(type='button') Imprint
+        button.btn.btn-dark.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")      
       .col-sm.my-4
         h4
           i.fas.fa-wifi.fa-5x
         h2 Addio Mondo Crudele
-        button.btn.btn-primary.btn-lg(type='button') Imprint
+        button.btn.btn-dark.btn-lg(type='button') Imprint
         img.logo.ml-5(src="images/yeogurt-swirl.png", width="75px")
