--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -4,11 +4,12 @@ head
 	meta(charset='utf-8')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 	title The Yellow Yurt
-	meta(name='description', content= 'Daemonite Frozen Yeogurt')
+	meta(name='description', content= 'Daemonite Flavored Frozen Yeogurt')
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
+
 	block stylesheets
-		link(rel='stylesheet' href='../styles/main.css')
-		//- link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/daemonite-material@4.1.1/css/material.css')
+		link(rel='stylesheet' href='../_styles/main.css')
+		link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/daemonite-material@4.1.1/css/material.css')
 		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=News+Cycle|Material+Icons')
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css')
 
